[gd_scene load_steps=3 format=3 uid="uid://g5rq5pc35xf8"]

[ext_resource type="Script" path="res://weapons/flyswatter.gd" id="1_8wf8l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ca2u0"]
size = Vector2(64, 32)

[node name="Flyswatter" type="Node2D"]
script = ExtResource("1_8wf8l")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_ca2u0")

[node name="ColorRect" type="ColorRect" parent="Area2D"]
offset_left = 16.0
offset_top = -16.0
offset_right = 80.0
offset_bottom = 16.0

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="ActiveTimer" to="." method="_on_active_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
